--- a/about.html
+++ b/about.html
@@ -5,14 +5,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>about</title>
-    <script type="module" crossorigin src="/web-layout-training-vite/assets/main-b0f5c4dd.js"></script>
-    <link rel="stylesheet" href="/web-layout-training-vite/assets/main-5c285a17.css">
+    <script type="module" crossorigin src="/hexWeek5/assets/main-5eeacc01.js"></script>
+    <link rel="stylesheet" href="/hexWeek5/assets/main-cbec11b4.css">
   </head>
   <body>
-    <h1 class="header">我是 header</h1>
-<a href="index.html">index</a>
-<a href="about.html">about</a>
-<a href="contact.html">contact</a>    <h1>我是about</h1>
+    <aside class="navbar navbar-expand-lg bg-body-tertiary vh-100 position-fixed top-0">
+    <div class="container-fluid flex-column align-items-start px-0 h-100">
+        <a class="navbar-brand px-2 mb-4" href="#"><img src="/hexWeek5/assets/logo-ANSWER-5336fb45.svg" alt=""></a>
+            <ul class="navbar-nav flex-column">
+                <li class="nav-item mb-2">
+                    <a class="nav-link border-start border-3 border-light" aria-current="page" href="#"><span
+                            class="material-symbols-outlined fill-icon align-bottom me-2 px-2">
+                            assessment</span>Dashboard</a>
+                </li>
+                <li class="nav-item mb-2">
+                    <a class="nav-link border-start border-3 border-light" href="#"><span
+                            class="material-symbols-outlined align-bottom me-2 px-2">
+                            forum </span>Question</a>
+                </li>
+                <li class="nav-item mb-2">
+                    <a class="nav-link active border-start border-3 border-success text-success" aria-current="page" href="#">
+                        <span class="material-symbols-outlined align-bottom me-2 px-2">
+                        assignment</span>Assignment</a>
+                </li>
+                <li class="nav-item mb-2">
+                    <a class="nav-link border-start border-3 border-light" href="#">
+                        <span class="material-symbols-outlined align-bottom me-2 px-2">
+                        video_library </span>Course</a>
+                </li>
+                <li class="nav-item mb-2">
+                    <a class="nav-link border-start border-3 border-light"
+                        href=""><span class="material-symbols-outlined align-bottom me-2 px-2">
+                            group </span>Admin</a>
+                </li>
+                <li class="nav-item mb-4 px-2">
+                    <a class="nav-link border-start border-3 border-light" href="#">
+                        <span class="material-symbols-outlined align-bottom me-2">
+                            settings </span>Settings</a>
+                </li>
+            </ul>
+            <div class="d-flex px-4 mt-auto mb-4">
+                <div class="flex-shrink-0">
+                    <img src="/hexWeek5/assets/andychen-f14fef59.jpeg" alt="..." 
+                    width="48" height="48" class="rounded-circle object-fit-cover">
+                </div>
+                <div class="flex-grow-1 ms-3">
+                    <p class="fw-bold h5">Andy Chen</p>
+                    <a class="text-secondary h6" href="mailto:andy0401@mail.com">andy0401@mail.com</a>
+                </div>
+            </div>
+       
+    </div>
+</aside>    <h1>我是about</h1>
     <footer class="footer">我是 footer</footer>
     
   </body>
