--- a/index.html
+++ b/index.html
@@ -114,42 +114,42 @@
           <div class="list-group collapse w-100" id="collapse-list">
             <a href="#" class="list-group-item border rounded-0 list-group-item-action" aria-current="true">
               <div class="d-flex mb-1">
-                <p class="m-0 fs-6">Chapter Assignment 2</p>
-                <p class="ms-auto m-0">4 hrs ago</p>
+                <p class="m-0 font-12 text-grey-900">Chapter Assignment 2</p>
+                <p class="ms-auto m-0 font-12 text-grey-900">4 hrs ago</p>
               </div>
-              <div class="d-flex">
+              <div class="d-flex align-items-end">
                 <p class="m-0 fw-bold">Please heck this file…</p>
-                <p class="ms-auto m-0 text-grey-600">Emily Wang</p>
+                <p class="ms-auto m-0 font-12 text-grey-600">Emily Wang</p>
               </div>
             </a>
             <a href="#" class="list-group-item border rounded-0 list-group-item-action">
               <div class="d-flex mb-1">
-                <p class="m-0 fs-6">Chapter Assignment 1</p>
-                <p class="ms-auto m-0">12 hrs ago</p>
+                <p class="m-0 font-12 text-grey-900">Chapter Assignment 1</p>
+                <p class="ms-auto m-0 font-12 text-grey-900">12 hrs ago</p>
               </div>
-              <div class="d-flex">
+              <div class="d-flex align-items-end">
                 <p class="m-0 fw-bold">My Homework</p>
-                <p class="ms-auto m-0 fs-6 text-grey-600">David Xu</p>
+                <p class="ms-auto m-0 font-12 text-grey-600">David Xu</p>
               </div>
             </a>
             <a href="#" class="list-group-item border rounded-0 list-group-item-action">
               <div class="d-flex mb-1">
-                <p class="m-0">Final Assignment</p>
-                <p class="ms-auto m-0 fs-6">18 hrs ago</p>
+                <p class="m-0 font-12 text-grey-900">Final Assignment</p>
+                <p class="ms-auto m-0 font-12 text-grey-900">18 hrs ago</p>
               </div>
-              <div class="d-flex">
+              <div class="d-flex align-items-end">
                 <p class="m-0 fw-bold">Have a problem with this…</p>
-                <p class="ms-auto m-0 fs-6 text-grey-600">Tony Wei</p>
+                <p class="ms-auto m-0 font-12 text-grey-600">Tony Wei</p>
               </div>
             </a>
             <a href="#" class="list-group-item border rounded-0 list-group-item-action">
               <div class="d-flex mb-1">
-                <p class="m-0">Final Assignment</p>
-                <p class="ms-auto m-0 fs-6">19 hrs ago</p>
+                <p class="m-0 font-12 text-grey-900">Final Assignment</p>
+                <p class="ms-auto m-0 font-12 text-grey-900">19 hrs ago</p>
               </div>
-              <div class="d-flex">
+              <div class="d-flex align-items-end">
                 <p class="m-0 fw-bold">Did I do it right?</p>
-                <p class="ms-auto m-0 fs-6 text-grey-600">
+                <p class="ms-auto m-0 font-12 text-grey-600">
                   Christina Lin
                 </p>
               </div>
